navbar and page_controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
     <div class="container <%= controller_name %> <%= action_name %>">
       <%= yield %>
     </div>
