--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-expand-sm navbar-light bg-faded">
   <div class='container'>
     <a class='navbar-brand' href='/'>
       Frog<span class='light'>blog</span>
@@ -24,9 +24,9 @@
     <button class="navbar-toggler hidden-sm-up pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
       &#9776;
     </button>
-    <ul class="nav pull-sm-right hidden-xs-down">
+    <ul class="nav navbar-nav pull-sm-right hidden-xs-down">
       <li class="nav-item">
-        <%= link_to 'Blog', root_path, class: "nav-link #{yield(:blog_active)}" %>
+        <%= link_to 'Blog', root_path, class: "nav-link  #{yield(:blog_active)}" %>
       </li>
       <li class="nav-item">
         <%= link_to 'About', about_path, class: "nav-link #{yield(:about_active)}" %>
