finsish part3, add author view

--- a/app/views/author/posts/index.html.erb
+++ b/app/views/author/posts/index.html.erb
@@ -3,5 +3,17 @@
 
 
 <div class="row">
-  <%= render @posts %>
+  <div>
+    <%= link_to 'New Post', new_author_post_path, class: 'btn btn-primary btn-large'%>
+  </div>
+
+  <br>
+  <br>
+
+  <table class="table table-striped">
+    <tr>
+      <th colspan="4">Title</th>
+    </tr>
+    <%= render @posts %>
+  </table>
 </div>
