finish part 4 , authors devise

--- a/app/views/authors/posts/index.html.erb
+++ b/app/views/authors/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div>
-    <%= link_to 'New Post', new_author_post_path, class: 'btn btn-primary btn-large'%>
+    <%= link_to 'New Post', new_authors_post_path, class: 'btn btn-primary btn-large'%>
   </div>
 
   <br>
