--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,9 +11,14 @@
         <li class="list-group-item">
           <%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
         </li>
-        <li class="list-group-item">
-          <%= link_to 'My posts', author_posts_path, class: "nav-link #{yield(:author_active)}" %>
-        </li>
+        <% if author_signed_in? %>
+          <li class="list-group-item">
+            <%= link_to 'My posts', authors_posts_path, class: "nav-link #{yield(:author_active)}" %>
+          </li>
+          <li class="list-group-item">
+              <%= link_to 'Logout', destroy_author_session_path, method: :delete, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
@@ -37,9 +42,14 @@
       <li class="nav-item">
         <%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
       </li>
-      <li class="nav-item">
-          <%= link_to 'My posts', author_posts_path, class: "nav-link #{yield(:author_active)}" %>
-      </li>
+      <% if author_signed_in? %>
+        <li class="nav-item">
+            <%= link_to 'My posts', authors_posts_path, class: "nav-link #{yield(:author_active)}" %>
+        </li>
+        <li class="nav-item">
+            <%= link_to 'Logout', destroy_author_session_path, method: :delete, class: "nav-link" %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
