finish part6: post edit

--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -7,6 +7,6 @@
     <p>
       <%= @post.display_day_published %>
     </p>
-    <%= @post.body %>
+    <%= @post.body.html_safe %>
   </div>
 </div>
