--- a/app/views/authors/posts/_form.html.erb
+++ b/app/views/authors/posts/_form.html.erb
@@ -11,32 +11,63 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :post_title %>
+  <div class="row">
+    <div class="col-md-4">
+
+      <div class="card">
+        <div class="card-body">
+          <% if @post.new_record? %>>
+            <h4 class="card-title">New post</h4>
+          <% else %>
+            <h4 class="card-title">
+              <b>Edit</b>
+              <span class="thin-text">
+                <%= @post.title %>
+              </span>
+            </h4>
+          <% end %>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="field">
+              <%= form.label :title %>
+              <%= form.text_field :title, id: :post_title, class: 'form-control' %>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="field">
+              <%= form.label :banner_image_url %>
+              <%= form.text_field :banner_image_url, id: :banner_image_url, class: 'form-control' %>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="field">
+              <%= form.label :description %>
+              <%= form.text_area :description,id: :post_description, class: 'form-control'%>
+            </div>
+          </li>
+
+          <li class="list-group-item">
+            <div class="field">
+              <div class="actions">
+                <%= form.submit "Save blog post", class: 'btn btn-success btn-lg btn-block'%>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div> 
+      <% if @post.persisted? %>
+        <%= link_to 'Show', @post %>
+      <% end %> | 
+      <%= link_to 'Back', authors_posts_path %>
+     </div>
+
+     <div class="col-md-8">
+        <div class="field">
+          <%= form.label :body %>
+          <%= form.text_area :body, id: :post_body %>
+        </div>
+     </div>
   </div>
 
-  <div class="field">
-    <%= form.label :banner_image_url %>
-    <%= form.text_field :banner_image_url, id: :banner_image_url %>
-  </div>
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :post_body %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :post_description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :slug %>
-    <%= form.text_field :slug, id: :post_slug %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
