--- a/app/views/authors/posts/show.html.erb
+++ b/app/views/authors/posts/show.html.erb
@@ -12,6 +12,6 @@
     <p>
       <%= @post.display_day_published %>
     </p>
-    <%= @post.body %>
+    <%= @post.body.html_safe %>
   </div>
 </div>
