finish part 9: tag scope

--- a/app/views/authors/posts/_form.html.erb
+++ b/app/views/authors/posts/_form.html.erb
@@ -47,6 +47,14 @@
             </div>
           </li>
 
+
+          <li class="list-group-item">
+            <div class="field">
+              <%= form.label 'Tag'%>
+              <%= form.text_area :tag_list, class: 'form-control'%>
+            </div>
+          </li>
+          
           <li class="list-group-item">
             <div class="field">
               <div class="actions">
