--- a/app/views/blog/posts/_post.html.erb
+++ b/app/views/blog/posts/_post.html.erb
@@ -5,13 +5,16 @@
     </div>
     <div class="card-block">
       <h4 class="card-title"><%= link_to post.title, post %></h4>
+      <p>
+        <%= raw post.tags.map { |t| link_to t.name, posts_path(tag: t.name) }.join(', ') %>
+      </p>
       <p class="published-date">
-        <%= post.display_day_published%>
+        <%= post.display_day_published %>
       </p>
       <p class="card-text">
         <%= truncate(post.description,length: 130) %>
       </p>
-      <%= link_to 'Read', post, class:'btn btn-read'%>
+      <%= link_to 'Read', post, class:'btn btn-read' %>
     </div>
   </div>
 </div>
